RESOLVED FIXED50841
[Chromium] canvas/philip/tests/2d.missingargs.html hangs on Snow Leopard
https://bugs.webkit.org/show_bug.cgi?id=50841
Summary [Chromium] canvas/philip/tests/2d.missingargs.html hangs on Snow Leopard
Mihai Parparita
Reported 2010-12-10 13:33:46 PST
[Chromium] canvas/philip/tests/2d.missingargs.html hangs on Snow Leopard
Attachments
Patch (3.25 KB, patch)
2010-12-10 13:38 PST, Mihai Parparita
no flags
Patch for landing (3.30 KB, patch)
2010-12-13 09:31 PST, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2010-12-10 13:38:30 PST
WebKit Review Bot
Comment 2 2010-12-10 19:40:13 PST
Comment on attachment 76250 [details] Patch Rejecting attachment 76250 [details] from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'build-and-test', '--no-clean', '--no-update', '--test', '--non-interactive']" exit_code: 2 Last 500 characters of output: .............. fast/borders ............................................................. fast/box-shadow ..... fast/box-sizing .... fast/canvas ...................................................................................................................... fast/canvas/strokeText-missing-args.html -> failed Exiting early after 1 failures. 6172 tests run. 106.05s total testing time 6171 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 4 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/6891046
Mihai Parparita
Comment 3 2010-12-13 09:31:49 PST
Created attachment 76393 [details] Patch for landing
Mihai Parparita
Comment 4 2010-12-13 09:34:26 PST
(In reply to comment #2) > fast/canvas/strokeText-missing-args.html -> failed I had only tested this with V8, with the JSC bindings strokeText() (with no arguments) throws an exception (which is fine too). I added a try/catch for that in the test.
WebKit Review Bot
Comment 5 2010-12-13 10:15:56 PST
Comment on attachment 76393 [details] Patch for landing Clearing flags on attachment: 76393 Committed r73926: <http://trac.webkit.org/changeset/73926>
WebKit Review Bot
Comment 6 2010-12-13 10:16:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.