2010-12-13  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Adam Barth.

        [Chromium] canvas/philip/tests/2d.missingargs.html hangs on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=50841

        Add test that calls strokeText() (i.e. with no arguments).

        * fast/canvas/strokeText-missing-args-expected.txt: Added.
        * fast/canvas/strokeText-missing-args.html: Added.
2010-12-13  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Adam Barth.

        [Chromium] canvas/philip/tests/2d.missingargs.html hangs on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=50841

        Test: fast/canvas/strokeText-missing-args.html

        We didn't have isfinite checks for the x and y coordinates that are
        passed to strokeText/drawTextInternal (unlike all the other methods,
        which got checks in r50910 and r59447).

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawTextInternal):

Canonical link: https://commits.webkit.org/64285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73926 268f45cc-cd09-0410-ab3c-d52691b4dbfc